--- a/public/css/style_profilo.css
+++ b/public/css/style_profilo.css
@@ -348,6 +348,15 @@
     border-radius: 24px;
 }
 
+.modal_content_large {
+    background-color: #fff;
+    padding: 40px;
+    border: 1px solid #eee;
+    box-shadow: 0 20px 60px rgba(0,0,0,0.1);
+    max-width: 600px; width: 90%;
+    border-radius: 24px;
+}
+
 /* Tessera Card Style */
 #tessera-card {
     background: var(--color_background_ligth);
